refactor: Made clean ip to the codes